Bug 69762 - EDITING: Value with scientific notation AutoCorrect as ordinal number in French
Summary: EDITING: Value with scientific notation AutoCorrect as ordinal number in French
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha1
Hardware: Other All
: medium normal
Assignee: Laurent Balland
URL:
Whiteboard: BSA target:4.2.0 target:4.1.4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-09-24 17:03 UTC by Laurent Balland
Modified: 2013-11-03 16:15 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Balland 2013-09-24 17:03:51 UTC
Problem description: 

Steps to reproduce:
1. In Calc, set language of font to French
2. type in a cell "<positive value>e-<integer>" such as 2,6e-3
3. validate

Current behavior:
Value is not recognized and is treated as text because 'e' is superscript because it is detected as ordinal number

Expected behavior:
The value should be recognized and AutoCorrect to ordinal number not activated

If the significand is negative or start with '+', no problem, the value is recognized.
If exponent is positive (without space after 'e'!), no problem, the value is recognized.
If a upper 'E' is used instead of lower 'e', no problem, the value is recognized.

The version (3.6.7) is the first version where I noticed that ordinal numbers are recognized in French, but it can be previously.
Same behavior in LibO 4.1.2 RC2

              
Operating System: All
Version: 3.6.7.2 release
Comment 1 Laurent Balland 2013-09-24 17:07:32 UTC
Of course, it is necessary that AutoCorrect Option > Localized Options > Format ordinal numbers suffixes (1st -> 1^st) is checked to reproduce the bug.
Comment 2 GerardF 2013-09-24 18:09:56 UTC
Hi Laurent,

Cannot reproduce with - following the e xith LO 4.0.5.2
I've got autocorrection as ordinal number only when the "e" is followed by a space.

Can you test with a more recent version than 3.6.7 ?
Comment 3 Laurent Balland 2013-09-24 18:18:59 UTC
As mentioned by GerardF, I got mixed with version. Sorry.
- The bug IS present in 4.1.0.a1, 4.1.0.4 and 4.1.2 RC2
- The bug is NOT present in 3.6.7, 4.0.5.2
Comment 4 GerardF 2013-09-24 19:09:33 UTC
Confirmed also with 4.2.0alpha0
Comment 5 Commit Notification 2013-11-03 15:52:02 UTC
Laurent Balland-Poirier committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=938881340e9203d3b265596b8c7359bb27560912

fdo#69762 Scientific number AutoCorrect as ordinal



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2013-11-03 16:15:15 UTC
Laurent Balland-Poirier committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ebb867f2b7d268eba5f39d387713fc2dac99a06d&h=libreoffice-4-1

fdo#69762 Scientific number AutoCorrect as ordinal


It will be available in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.