fdo#69762 Scientific number AutoCorrect as ordinal

In French, ordinal number autocorrection transforms
2e-3 in 2^e-3 which is annoying in Calc.
This patch avoids autocorrection with [digit][e|E]-

Change-Id: Iaaff4f8d6e667fc84a68d7c11e1a96da13594a18